--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Аренда премиальных автомобилей</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="img/logo.png" alt="logo">
+                <img src="logo.png" alt="logo">
             </div>
             <nav class="menu">
                 <ul>
@@ -50,22 +50,22 @@
             <div class="car-items">
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/1.png" alt="img1">
+                        <img src="1.png" alt="img1">
                     </div>
                     <div class="car-item-title">Lamborghini Huracan Spyder</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>5.2 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2019</div>
                         </div>
@@ -76,22 +76,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/2.png" alt="img2">
+                        <img src="2.png" alt="img2">
                     </div>
                     <div class="car-item-title">Chevrolet Corvette</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>6.2 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2017</div>
                         </div>
@@ -102,22 +102,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/3.png" alt="img3">
+                        <img src="3.png" alt="img3">
                     </div>
                     <div class="car-item-title">Ferrari California</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>3.9 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2010</div>
                         </div>
@@ -128,22 +128,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/4.png" alt="img4">
+                        <img src="4.png" alt="img4">
                     </div>
                     <div class="car-item-title">Lamborghini Urus</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>4.0 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2019</div>
                         </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/5.png" alt="img5">
+                        <img src="5.png" alt="img5">
                     </div>
                     <div class="car-item-title">Audi R8</div>
                     <div class="car-item-info">
@@ -164,12 +164,12 @@
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>5.2 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2018</div>
                         </div>
@@ -180,22 +180,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/6.png" alt="img6">
+                        <img src="6.png" alt="img6">
                     </div>
                     <div class="car-item-title">Chevrolet Camaro</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>2.0 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2019</div>
                         </div>
@@ -206,22 +206,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/7.png" alt="img7">
+                        <img src="7.png" alt="img7">
                     </div>
                     <div class="car-item-title">Maserati Quattroporte</div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>3.0 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2018</div>
                         </div>
@@ -232,22 +232,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/8.png" alt="img8">
+                        <img src="8.png" alt="img8">
                     </div>
                     <div class="car-item-title">Dodge Challenger </div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>6.4 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2019</div>
                         </div>
@@ -258,22 +258,22 @@
                 </div>
                 <div class="car-item">
                     <div class="car-item-img">
-                        <img src="img/9.png" alt="img9">
+                        <img src="9.png" alt="img9">
                     </div>
                     <div class="car-item-title">Nissan GT-R </div>
                     <div class="car-item-info">
                         <div class="car-item-point">
-                            <img src="img/transmission.png" alt="transmission">
+                            <img src="transmission.png" alt="transmission">
                             <div>Коробка</div>
                             <div>Автомат</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/wheel.png" alt="Wheel">
+                            <img src="wheel.png" alt="Wheel">
                             <div>Двигатель</div>
                             <div>3.8 л.с.</div>
                         </div>
                         <div class="car-item-point">
-                            <img src="img/year.png" alt="year">
+                            <img src="year.png" alt="year">
                             <div>Год выпуска</div>
                             <div>2019</div>
                         </div>
@@ -297,19 +297,19 @@
                 <input type="text" class="price-input" id="car" placeholder="Автомобиль, который вас интересует">
                 <button class="button" type="button" id="price-action">Узнать цену</button>
             </form>
-            <img src="img/rolls.png" alt="rolls" class="price-img">
+            <img src="rolls.png" alt="rolls" class="price-img">
         </div>
     </section>
 
     <footer class="footer">
         <div class="container">
             <div class="logo">
-                <img src="img/logo.png" alt="logo">
+                <img src="logo.png" alt="logo">
             </div>
             <div class="rig">Все права защищены</div>
         </div>
     </footer>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html> 
